Update v0.5.1 ~Refactored the plugin load procedure  Plugins and Shelfs now get packaged in a new jar.